:bug: Fix edit button not centered

--- a/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
@@ -192,6 +192,10 @@
   cursor: pointer;
 }
 
+.edit-theme-button {
+  justify-content: center;
+}
+
 .resize-area-horiz {
   position: absolute;
   left: 0;
